# soundata

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  kubectl.sha256  modules.rst  paper.bib  paper.crossref  paper.md  pyproject.toml  setup.py  test.py  tox.ini
.circleci/: config.yml
.github/: environment-ci.yml  environment-lint.yml
.github/PULL_REQUEST_TEMPLATE/: new_loader.md
.github/workflows/: ci.yml  delete-docs-preview.yml  docs-preview.yml  docs.yml  formatting.yml  lint-python.yml  pythonpublish.yml
bird_index_info/: bird_songs_metadata.csv
datasets/indexes/: clotho_index_2.1.json
docs/: .readthedocs.yml  conf.py  index.rst  requirements.txt
docs/source/: colab_example.rst  contributing.rst  faq.rst  overview.rst  quick_reference.rst  soundata.rst  table.rst  tutorial.rst
paper/: paper.md  references.bib
preview/PR-122/: genindex.html  index.html  searchindex.js
preview/PR-123/: .buildinfo  objects.inv  py-modindex.html  search.html
scripts/: make_acousticbrainz_genre.py  make_beatport_key.py  make_billboard_index.py  make_birdsongs_index.py  make_clotho_index.py  make_compmusic_otmm_makam_index.py  make_dcase2020task2_index.py  make_dcase23_task2_index.py  make_dcase23_task4b_index.py  make_dcase23_task6a_index.py  make_dcase23_task6b_index.py  make_dcase_bioacoustic_index.py  make_dcase_birdVox20k_index.py  make_eigenscape_index.py  make_eigenscape_raw_index.py  make_esc50_index.py  make_freefield1010_index.py  make_fsd50k_index.py  make_fsdnoisy18k_index.py  make_marco_index.py  make_mavd_index.py  make_phenicx_anechoic_index.py  make_saraga_carnatic_index.py  make_saraga_hindustani_index.py  make_singapura_index.py  make_sonyc_ust_index.py  make_starss2022_index.py  make_tau2019_uas_index.py  make_tau2019sse_index.py  make_tau2019uas_index.py  make_tau2020uas_mobile_index.py  make_tau2021sse_nigens_index.py  make_tau2022uas_mobile_index.py  make_tau_nigens_sse_2020_index.py  make_tau_nigens_sse_2021_index.py  make_tau_sse_2019_index.py  make_tfgbirdsongs_index.py  make_tonality_classicaldb.py  make_tut2017se_index.py  make_tut_sound_events_2017_index.py  (+6 more)
scripts/legacy/: make_cante100_index.py  make_dali_index.py  make_giantsteps_key.py  make_giantsteps_tempo.py  make_groove_midi_index.py  make_gtzan_genre_index.py  make_guitarset_index.py  make_ikala_index.py  make_irmas_index.py  make_maestro_index.py  make_medley_solos_db_index.py  make_medleydb_melody_index.py  make_medleydb_pitch_index.py  make_mridangam_stroke_index.py  make_orchset_index.py  make_rwc_classical_index.py  make_rwc_jazz_index.py  make_rwc_popular_index.py  make_salami_index.py  make_tinysol_index.py  update_index.py
soundata/: __init__.py  annotations.py  core.py  display_plot.py  display_plot_utils.py  download_utils.py  io.py  jams_utils.py  validate.py  version.py
soundata/datasets/: acousticbrainz_genre.py  beatles.py  beatport_key.py  billboard.py  birdsongs.py  cante100.py  clotho.py  compmusic_otmm_makam.py  dali.py  dcase2020task2.py  dcase23_task2.py  dcase23_task4b.py  dcase23_task6a.py  dcase23_task6b.py  dcase_bioacoustic.py  dcase_birdVox20k.py  eigenscape.py  eigenscape_raw.py  esc50.py  freefield1010.py  fsd50k.py  fsdnoisy18k.py  giantsteps_key.py  giantsteps_tempo.py  groove_midi.py  gtzan_genre.py  guitarset.py  ikala.py  irmas.py  maestro.py  marco.py  mavd.py  medley_solos_db.py  medleydb_melody.py  medleydb_pitch.py  mridangam_stroke.py  orchset.py  phenicx_anechoic.py  rwc_classical.py  rwc_jazz.py  (+27 more)
tests/: test_acousticbrainz_genre.py  test_annotations.py  test_beatles.py  test_beatport_key.py  test_billboard.py  test_cante100.py  test_core.py  test_dali.py  test_display_plot.py  test_display_plot_utils.py  test_download_utils.py  test_full_dataset.py  test_giantsteps_key.py  test_giantsteps_tempo.py  test_groove_midi.py  test_gtzan_genre.py  test_guitarset.py  test_ikala.py  test_initialize.py  test_io.py  test_irmas.py  test_jams_utils.py  test_loaders.py  test_maestro.py  test_medley_solos_db.py  test_medleydb_melody.py  test_medleydb_pitch.py  test_mridangam_stroke.py  test_orchset.py  test_otmm_makam.py  test_phenicx_anechoic.py  test_rwc_classical.py  test_rwc_jazz.py  test_rwc_popular.py  test_salami.py  test_saraga_carnatic.py  test_saraga_hindustani.py  test_tinysol.py  test_tonality_classicaldb.py  test_utils.py
tests/datasets/: test_birdsongs.py  test_clotho.py  test_dcase2020task2.py  test_dcase23_task2.py  test_dcase23_task4b.py  test_dcase23_task6a.py  test_dcase23_task6b.py  test_dcase_bioacoustic.py  test_dcase_birdVox20k.py  test_eigenscape.py  test_eigenscape_raw.py  test_esc50.py  test_freefield1010.py  test_fsd50k.py  test_fsdnoisy18k.py  test_marco.py  test_singapura.py  test_starss2022.py  test_tau2019_uas.py  test_tau2019sse.py  test_tau2019uas.py  test_tau2020sse_nigens.py  test_tau2020uas_mobile.py  test_tau2021sse_nigens.py  test_tau2022uas_mobile.py  test_tau_nigens_sse_2020.py  test_tau_nigens_sse_2021.py  test_tau_sse_2019.py  test_tfgbirdsongs.py  test_tut2017se.py  test_tut_sound_events_2017.py  test_urbansas.py  test_urbansed.py  test_urbansound8k.py  test_usotw.py  test_warblrb10k.py
tests/indexes/: birdsongs_index_1.0_sample.json  clotho_index_2.1_sample.json  dcase23_task2_index_1.0_sample.json  dcase23_task4b_index_1.0_sample.json  dcase23_task6b_index_1.0_sample.json  dcase_bioacoustic_index_3.0_sample.json  dcase_birdVox20k_index_1.0_sample.json  eigenscape_index_2.0_sample.json  eigenscape_raw_index_1.0_sample.json  esc50_index_2.0_sample.json  freefield1010_index_1.0_sample.json  fsd50k_index_1.0_sample.json  fsdnoisy18k_index_1.0_sample.json  marco_index_1.0.1_sample.json  singapura_index_1.0a_sample.json  starss2022_index_1.0_sample.json  tau2019sse_index_2.0_sample.json  tau2019uas_index_1.0_sample.json  tau2020sse_nigens_index_1.2.0_sample.json  tau2020uas_mobile_index_2.0_sample.json  tau2021sse_nigens_index_1.2.0_sample.json  tau2022uas_mobile_index_3.0_sample.json  test_index_invalid_checksum.json  (+7 more)
(+204 files in other folders)
