[build-system]
requires = ["poetry-core>=1.5.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "soundata"
version = "1.0.1"
description = "Python library for loading and working with sound datasets."
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Magdalena Fuentes", email = "mfuentes@nyu.edu"},
    {name = "Genís Plaja-Roglans"},
    {name = "Guillem Cortès-Sebastià"},
    {name = "Tanmay Khandelwal"},
    {name = "Marius Miron"},
    {name = "Xavier Serra"},
    {name = "Juan Pablo Bello"},
    {name = "Justin Salamon"}
]
keywords = ["sound", "dataset loader", "audio"]
maintainers = [
    {name = "Magdalena Fuentes", email = "mfuentes@nyu.edu"},
    {name = "Genís Plaja-Roglans"},
    {name = "Guillem Cortès-Sebastià"},
    {name = "Tanmay Khandelwal"},
]
classifiers=[
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry]
name = "soundata"
version = "1.0.1"
authors = ["Magdalena Fuentes <mfuentes@nyu.edu>"]
description = "Python library for loading and working with sound datasets."

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
librosa = ">=0.10.0"
numpy = ">=1.21.6"
pandas = ">=1.3.5"
tqdm = ">=4.65.0"
jams = ">=0.3.4"
py7zr = ">=0.16.0"
pre-commit = "2.20.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
requests = ">=2.31.0"
pytest = ">=7.2.0"
pytest-cov = ">=4.1.0"
pytest-pep8 = ">=1.0.6"
pytest-mock = ">=3.10.0"
pytest-localserver = ">=0.7.1"
pytest-xdist = ">=2.3.0"
future = ">=0.18.3"
coveralls = ">=3.3.1"
black = ">=23.3.0"
flake8 = ">=5.0.4"
mypy = ">=0.982"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
docutils = "==0.16"
numpydoc = "*"
recommonmark = "*"
sphinx = ">=3.4.0"
sphinxcontrib-napoleon = "*"
sphinx_rtd_theme = "*"
sphinx-togglebutton = "*"
ipywidgets = ">=8.1.1"

[tool.poetry.group.plots]
optional = true

[tool.poetry.group.plots.dependencies]
simpleaudio = ">=1.0.4"
seaborn = ">=0.11.2"
ipywidgets = ">=8.1.1"
pydub = ">=0.25.1"

[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
flake8 = ">=5.0.4"
mypy = ">=0.982"
types-decorator = ">=5.1.8.3"

[project.urls]
"Homepage" = "https://github.com/soundata/soundata"
"Documentation" = "https://soundata.readthedocs.io/en/latest/"
"Issues" = "https://github.com/soundata/soundata/issues"
"Releases" = "http://github.com/soundata/soundata/releases"
